finish filter project

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rick and Morty</title>
+    <title>Project: Rick and Morty</title>
 
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -26,32 +26,7 @@
         <button class="filter-btn" data-filter="unknown">Unknown</button>
       </div>
 
-      <div class="card-wrapper">
-        <div class="card">
-          <img src="images/rick.jpeg" alt="" class="card-img" />
-          <div class="card-info">
-            <span class="badge">Alive</span>
-            <h3>Rick Sanchez</h3>
-            <p>Planet Earth</p>
-          </div>
-        </div>
-        <div class="card">
-          <img src="images/morty.jpeg" alt="" class="card-img" />
-          <div class="card-info">
-            <span class="badge">Dead</span>
-            <h3>Morty</h3>
-            <p>Planet Earth</p>
-          </div>
-        </div>
-        <div class="card">
-          <img src="images/cyborg.jpeg" alt="" class="card-img" />
-          <div class="card-info">
-            <span class="badge">Unknown</span>
-            <h3>Cyborg</h3>
-            <p>Planet Earth</p>
-          </div>
-        </div>
-      </div>
+      <div class="card-wrapper"></div>
     </div>
 
     <script src="script.js"></script>
